; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_blist.c_blst_copy.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_blist.c_blst_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i64 }

@BLIST_BMAP_RADIX = common dso_local global i32 0, align 4
@BLIST_META_RADIX_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32, i32, i32, i32, i32)* @blst_copy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @blst_copy(%struct.TYPE_5__* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* @BLIST_BMAP_RADIX, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %65

20:                                               ; preds = %6
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  store i32 %24, i32* %15, align 4
  %25 = load i32, i32* %15, align 4
  %26 = icmp eq i32 %25, -1
  br i1 %26, label %27, label %32

27:                                               ; preds = %20
  %28 = load i32, i32* %11, align 4
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* %12, align 4
  %31 = call i32 @blist_free(i32 %28, i32 %29, i32 %30)
  br label %64

32:                                               ; preds = %20
  %33 = load i32, i32* %15, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %63

35:                                               ; preds = %32
  store i32 0, i32* %16, align 4
  br label %36

36:                                               ; preds = %59, %35
  %37 = load i32, i32* %16, align 4
  %38 = load i32, i32* @BLIST_BMAP_RADIX, align 4
  %39 = icmp slt i32 %37, %38
  br i1 %39, label %40, label %44

40:                                               ; preds = %36
  %41 = load i32, i32* %16, align 4
  %42 = load i32, i32* %12, align 4
  %43 = icmp slt i32 %41, %42
  br label %44

44:                                               ; preds = %40, %36
  %45 = phi i1 [ false, %36 ], [ %43, %40 ]
  br i1 %45, label %46, label %62

46:                                               ; preds = %44
  %47 = load i32, i32* %15, align 4
  %48 = load i32, i32* %16, align 4
  %49 = shl i32 1, %48
  %50 = and i32 %47, %49
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %58

52:                                               ; preds = %46
  %53 = load i32, i32* %11, align 4
  %54 = load i32, i32* %8, align 4
  %55 = load i32, i32* %16, align 4
  %56 = add nsw i32 %54, %55
  %57 = call i32 @blist_free(i32 %53, i32 %56, i32 1)
  br label %58

58:                                               ; preds = %52, %46
  br label %59

59:                                               ; preds = %58
  %60 = load i32, i32* %16, align 4
  %61 = add nsw i32 %60, 1
  store i32 %61, i32* %16, align 4
  br label %36

62:                                               ; preds = %44
  br label %63

63:                                               ; preds = %62, %32
  br label %64

64:                                               ; preds = %63, %27
  br label %161

65:                                               ; preds = %6
  %66 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %67 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %66, i32 0, i32 1
  %68 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %67, i32 0, i32 1
  %69 = load i64, i64* %68, align 8
  %70 = icmp eq i64 %69, 0
  br i1 %70, label %71, label %72

71:                                               ; preds = %65
  br label %161

72:                                               ; preds = %65
  %73 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %74 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %73, i32 0, i32 1
  %75 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %74, i32 0, i32 1
  %76 = load i64, i64* %75, align 8
  %77 = load i32, i32* %9, align 4
  %78 = sext i32 %77 to i64
  %79 = icmp eq i64 %76, %78
  br i1 %79, label %80, label %95

80:                                               ; preds = %72
  %81 = load i32, i32* %12, align 4
  %82 = load i32, i32* %9, align 4
  %83 = icmp slt i32 %81, %82
  br i1 %83, label %84, label %89

84:                                               ; preds = %80
  %85 = load i32, i32* %11, align 4
  %86 = load i32, i32* %8, align 4
  %87 = load i32, i32* %12, align 4
  %88 = call i32 @blist_free(i32 %85, i32 %86, i32 %87)
  br label %94

89:                                               ; preds = %80
  %90 = load i32, i32* %11, align 4
  %91 = load i32, i32* %8, align 4
  %92 = load i32, i32* %9, align 4
  %93 = call i32 @blist_free(i32 %90, i32 %91, i32 %92)
  br label %94

94:                                               ; preds = %89, %84
  br label %161

95:                                               ; preds = %72
  %96 = load i32, i32* @BLIST_META_RADIX_SHIFT, align 4
  %97 = load i32, i32* %9, align 4
  %98 = ashr i32 %97, %96
  store i32 %98, i32* %9, align 4
  %99 = load i32, i32* %10, align 4
  %100 = load i32, i32* @BLIST_META_RADIX_SHIFT, align 4
  %101 = ashr i32 %99, %100
  store i32 %101, i32* %13, align 4
  store i32 1, i32* %14, align 4
  br label %102

102:                                              ; preds = %157, %95
  %103 = load i32, i32* %12, align 4
  %104 = icmp ne i32 %103, 0
  br i1 %104, label %105, label %109

105:                                              ; preds = %102
  %106 = load i32, i32* %14, align 4
  %107 = load i32, i32* %10, align 4
  %108 = icmp sle i32 %106, %107
  br label %109

109:                                              ; preds = %105, %102
  %110 = phi i1 [ false, %102 ], [ %108, %105 ]
  br i1 %110, label %111, label %161

111:                                              ; preds = %109
  %112 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %113 = load i32, i32* %14, align 4
  %114 = sext i32 %113 to i64
  %115 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %112, i64 %114
  %116 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %115, i32 0, i32 0
  %117 = load i32, i32* %116, align 8
  %118 = icmp eq i32 %117, -1
  br i1 %118, label %119, label %120

119:                                              ; preds = %111
  br label %161

120:                                              ; preds = %111
  %121 = load i32, i32* %12, align 4
  %122 = load i32, i32* %9, align 4
  %123 = icmp sge i32 %121, %122
  br i1 %123, label %124, label %138

124:                                              ; preds = %120
  %125 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %126 = load i32, i32* %14, align 4
  %127 = sext i32 %126 to i64
  %128 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %125, i64 %127
  %129 = load i32, i32* %8, align 4
  %130 = load i32, i32* %9, align 4
  %131 = load i32, i32* %13, align 4
  %132 = sub nsw i32 %131, 1
  %133 = load i32, i32* %11, align 4
  %134 = load i32, i32* %9, align 4
  call void @blst_copy(%struct.TYPE_5__* %128, i32 %129, i32 %130, i32 %132, i32 %133, i32 %134)
  %135 = load i32, i32* %9, align 4
  %136 = load i32, i32* %12, align 4
  %137 = sub nsw i32 %136, %135
  store i32 %137, i32* %12, align 4
  br label %153

138:                                              ; preds = %120
  %139 = load i32, i32* %12, align 4
  %140 = icmp ne i32 %139, 0
  br i1 %140, label %141, label %152

141:                                              ; preds = %138
  %142 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %143 = load i32, i32* %14, align 4
  %144 = sext i32 %143 to i64
  %145 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %142, i64 %144
  %146 = load i32, i32* %8, align 4
  %147 = load i32, i32* %9, align 4
  %148 = load i32, i32* %13, align 4
  %149 = sub nsw i32 %148, 1
  %150 = load i32, i32* %11, align 4
  %151 = load i32, i32* %12, align 4
  call void @blst_copy(%struct.TYPE_5__* %145, i32 %146, i32 %147, i32 %149, i32 %150, i32 %151)
  br label %152

152:                                              ; preds = %141, %138
  store i32 0, i32* %12, align 4
  br label %153

153:                                              ; preds = %152, %124
  %154 = load i32, i32* %9, align 4
  %155 = load i32, i32* %8, align 4
  %156 = add nsw i32 %155, %154
  store i32 %156, i32* %8, align 4
  br label %157

157:                                              ; preds = %153
  %158 = load i32, i32* %13, align 4
  %159 = load i32, i32* %14, align 4
  %160 = add nsw i32 %159, %158
  store i32 %160, i32* %14, align 4
  br label %102

161:                                              ; preds = %64, %71, %94, %119, %109
  ret void
}

declare dso_local i32 @blist_free(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
